# SmartPointerCustomHandler

./: CMakeLists.txt
test/: CMakeLists.txt  TestSharedPtr.cpp  TestWeakPtr.cpp  test.cpp
test/BuildScript/: WrapTestBuilt.cmake
util/Base/: CMakeLists.txt  Interface.h  TypeHelpers.h
util/PermissionForHeap/: CMakeLists.txt  StackAllocationDetection.h  StackAllocationDetection_unix.cpp  StackAllocationDetection_win.cpp
util/SmartPtr/: CMakeLists.txt  CountableObj.h  Impl.h  Observable.cpp  Observable.h  PtrHelpers.h  SharedPtr.cpp  SharedPtr.h  TypesValidation.h  WeakPtr.h
